Fix to blog image and about text alignment

--- a/src/pages/about.module.css
+++ b/src/pages/about.module.css
@@ -77,6 +77,7 @@ notePost a:hover {
   .notePost {
     display: flex;
     justify-content: space-between;
+    flex-direction: row;
     align-items: center;
     padding: 1rem 0;
     border-bottom: #e5e5e5 1px solid;
